--- a/index.html
+++ b/index.html
@@ -929,7 +929,7 @@ We hope you enjoy our project as much as we enjoyed while creating it. If you ha
 		<div class="row">
 			<div class="col-md-3 profile-pic text-center">
 				<div class="img-box">
-				<img src="/images/ro.gif" class="img-responsive">
+				<img src="/images/ro.jpg" class="img-responsive">
 				</div>
 				<h2>RAHMAN TAOFIQUR</h2>
 				<h3>Founder/CEO</h3>
